<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.example.loginvalidation.viewmodel.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        tools:context=".view.LoginActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            app:cardBackgroundColor="@color/cardview_shadow_start_color"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="0dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#A8000000" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <TextView
                        android:id="@+id/textView"
                        style="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="104dp"
                        android:text="@string/login_signup"
                        android:textColor="@color/white"
                        android:textSize="44sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="44dp"
                        android:layout_marginEnd="24dp"
                        android:background="@drawable/input_bg"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/email_signup"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="20dp"
                        android:paddingTop="13dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="13dp"
                        app:error="@{loginViewModel.userError.emailErrorMessage}"
                        android:text="@={loginViewModel.email}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView"
                        android:autofillHints=".com" />

                    <EditText
                        android:autofillHints=""
                        android:id="@+id/password_"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/input_bg"
                        android:drawableStart="@drawable/ic_baseline_security_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/password_login"
                        android:inputType="textPassword"
                        app:error="@{loginViewModel.userError.passwordErrorMessage}"
                        android:paddingLeft="20dp"
                        android:paddingTop="13dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="13dp"
                        android:text="@={loginViewModel.password}"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/email"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/email"
                        app:layout_constraintTop_toBottomOf="@+id/email" />

                    <TextView

                        android:id="@+id/forgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"

                        android:text="Forgot Password?"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="@+id/password_"
                        app:layout_constraintTop_toBottomOf="@+id/password_" />

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/button_states"
                        android:onClick="@{() -> loginViewModel.loginButton()}"
                        android:text="Login"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="@+id/forgotPassword"
                        app:layout_constraintHorizontal_bias="0.496"
                        app:layout_constraintStart_toStartOf="@+id/password_"
                        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

                    <TextView
                        android:id="@+id/newAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:onClick="@{() -> loginViewModel.signupButton()}"
                        android:text="@string/create_new_account"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/login_button"
                        app:layout_constraintHorizontal_bias="0.496"
                        app:layout_constraintStart_toStartOf="@+id/login_button"
                        app:layout_constraintTop_toBottomOf="@+id/login_button" />

                    <TextView
                        android:id="@+id/or"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="OR"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@+id/newAccount"
                        app:layout_constraintHorizontal_bias="0.503"
                        app:layout_constraintStart_toStartOf="@+id/newAccount"
                        app:layout_constraintTop_toBottomOf="@+id/newAccount" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="16dp"
                        android:background="@color/white"
                        app:layout_constraintBottom_toBottomOf="@+id/or"
                        app:layout_constraintEnd_toEndOf="@+id/login_button"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/or"
                        app:layout_constraintTop_toTopOf="@+id/or" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginEnd="16dp"
                        android:background="@color/white"
                        app:layout_constraintBottom_toBottomOf="@+id/or"
                        app:layout_constraintEnd_toStartOf="@+id/or"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/login_button"
                        app:layout_constraintTop_toTopOf="@+id/or"
                        app:layout_constraintVertical_bias="0.47" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="46dp"
                        android:layout_height="56dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                        app:layout_constraintEnd_toStartOf="@+id/imageView2"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintHorizontal_chainStyle="packed"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageView3"
                        app:srcCompat="@drawable/g_logo" />

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="53dp"
                        android:layout_height="47dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                        app:layout_constraintEnd_toStartOf="@+id/imageView3"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/imageView"
                        app:layout_constraintTop_toTopOf="@+id/imageView3"
                        app:srcCompat="@drawable/fb2" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="51dp"
                        android:layout_height="54dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/imageView4"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toBottomOf="@+id/or"
                        app:srcCompat="@drawable/p3" />

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="61dp"
                        android:layout_height="50dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                        app:layout_constraintEnd_toStartOf="@+id/imageView5"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/imageView3"
                        app:layout_constraintTop_toTopOf="@+id/imageView3"
                        app:srcCompat="@drawable/t2" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="62dp"
                        android:layout_height="37dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toEndOf="@+id/imageView4"
                        app:layout_constraintTop_toTopOf="@+id/imageView3"
                        app:srcCompat="@drawable/git2" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>